finish register yeki user and email;verified true
